--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Project</title>
+  <title>Document</title>
 </head>
 <body>
-  <header></header>
-  <main></main>
-  <footer></footer>
+  
 </body>
 </html>
